--- a/ItSolutions/index.html
+++ b/ItSolutions/index.html
@@ -7,6 +7,8 @@
       <link rel="stylesheet" type="text/css" href="style.css">
    </head>
    <body>
+       <h1>Halloj</h1>
+       
       <div class="nav-bar">
          <h2 class="logo"><img src="logo.jpg" alt="" height="100" width="150"></h2>
          <ul class="nav">
