--- a/ItSolutions/index.html
+++ b/ItSolutions/index.html
@@ -23,7 +23,7 @@
             </div>
          </div>
       </div>
-      <img src="home.jpg" alt="home" height="200" width="300"5
+      <img src="work.jpg" alt="home" height="200" width="300"5
       <div class = "text">
             <p><strong>Vi erbjuder lösningar inom Strategi och Verksamhet, Design och Teknik. Genom att kombinera dessa kompetenser kan vi ta oss an och genomföra projekt med leveransansvar, eller agera som specialister hos våra kunder. Oavsett leveransform arbetar vi alltid tillsammans och nära kunden för att skapa de bästa förutsättningarna för ett lyckat slutresultat. .</p>
             </div>
