Fixed tablet design

--- a/kontakt.html
+++ b/kontakt.html
@@ -43,7 +43,7 @@
                 <ul>
                   <li>
                     <div class="card">
-                      <img src="images/kontakt.jpg" alt="work" >
+                      <img class="kontaktbild"src="images/kontakt.jpg" alt="work" >
                       
                     </div>    
                    </li>
