Fixed desktop design

--- a/roro92.github.io-af5228a29c4c570862b77d2514eb1b2e648f97ed/omoss.html
+++ b/roro92.github.io-af5228a29c4c570862b77d2514eb1b2e648f97ed/omoss.html
@@ -30,9 +30,9 @@
                         <li><a href="kunder.html">Kunder</a></li>
                         <li><a href="omoss.html">Om oss</a></li>
                         <li><a href="kontakt.html">Kontakt</a></li>
-                        <li class="tw"><img class="social-media" src="faceblue.png" alt="face"></li>
-                        <li class="tw"><img class="social-media" src="twitterblue.png" alt="twitter"></li>
-                        <li class="tw"><img class="social-media" src="linkedinblue.png" alt="linkedin"></li>
+                        <li class="tw"><img class="social-media" src="facewhite.png" alt="face"></li>
+                        <li class="tw"><img class="social-media" src="twitterwhite.png" alt="twitter"></li>
+                        <li class="tw"><img class="social-media" src="linkedinwhite.png" alt="linkedin"></li>
                     </ul>
                 </nav>
             </div>
